[package]
name = "slothpix"
version = "1.0.0"
edition = "2021"

[dependencies]
# AI Inference
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs", "directml"] }
ndarray = "0.15"

# Image Processing
image = "0.25"
rayon = "1.10"

# CLI & Error Handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"

# Windows Integration
winrt-notification = "0.5.1"
native-windows-gui = "1.0"
native-windows-derive = "1.0"

[build-dependencies]
winres = "0.1"
